# Cyclomatic-Complexity

./: CMakeLists.txt  README.md
include/: CyclomaticComplexity.h
src/: CyclomaticComplexity.cpp  CyclomaticComplexity2.cpp
test/: test.c  test.cpp
